name:                RegisterMachine
version:             0.1.0.0
synopsis:            An implementation of a simple register machine
description:         Please see README.md
homepage:            https://gitlab.doc.ic.ac.uk/fz315/RegisterMachine.git
license:             BSD3
license-file:        LICENSE
author:              Fangyi Zhou
maintainer:          fangyi.zhou15@imperial.ac.uk
copyright:           2016 Fangyi Zhou
category:            Simulation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RegisterMachine
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.doc.ic.ac.uk/fz315/RegisterMachine.git
